fixed home page overflow

--- a/services/frontend/src/components/UI/Slider/Slider.module.scss
+++ b/services/frontend/src/components/UI/Slider/Slider.module.scss
@@ -22,8 +22,8 @@
   }
 }
 .subWrapperL {
-  left: -43px;
+  left: -32px;
 }
 .subWrapperR {
-  right: -43px;
+  right: -32px;
 }
